fix: bug for page stretch in edge browser.

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
+html {
+  height: 100%;
+  overflow: hidden;
+}
+
+body {
+  height: 100%;
+  overflow: auto;
+}
+
 body, h1, h2, h3, h4, h5, h6, p {
   margin: 0;
 }
